src/objects/Event_Attendance_Details__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Duration_Minutes__c</fullName>
        <label>Attendance Duration (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendance_Status__c</fullName>
        <label>Attendance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event_Attendee_Timings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventAttendeeId__c</fullName>
        <label>EventAttendeeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventNumber__c</fullName>
        <label>EventNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date_and_Time__c</fullName>
        <label>Event Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;EventId__c, EventNumber__c,&apos;_parent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Subject__c</fullName>
        <label>Event Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_No_s__c</fullName>
        <label>Outcome No(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preparation_Time_Minutes__c</fullName>
        <label>PreparationTime (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Usage</label>
        <referenceTo>Service_Usage__c</referenceTo>
        <relationshipLabel>Attendance Details</relationshipLabel>
        <relationshipName>Event_Attendance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Time_Minutes__c</fullName>
        <label>Travel Time (Minutes)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Attendance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Attendance Details</label>
    <nameField>
        <displayFormat>EA-{0000000000}</displayFormat>
        <label>EventAttendeeTiming Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendance Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>